workspace-sf/force-app/main/default/objects/Conversao__mdt/Conversao__mdt.object-meta.xml
<CustomObject>
    <label>Conversão</label>
    <pluralLabel>Conversões</pluralLabel>
</CustomObject>