workspace-sf/force-app/main/default/objects/Conversao__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <length>80</length>
    <type>Text</type>
</CustomField>