workspace-sf/force-app/main/default/objects/Conversao__mdt/fields/NomeCampo__c.field-meta.xml
<CustomField>
    <fullName>NomeCampo__c</fullName>
    <label>Nome do campo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>