workspace-sf/force-app/main/default/objects/Conversao__mdt/fields/ValorExterno__c.field-meta.xml
<CustomField>
    <fullName>ValorExterno__c</fullName>
    <label>Valor externo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>