workspace-sf/force-app/main/default/objects/Conversao__mdt/fields/ValorInterno__c.field-meta.xml
<CustomField>
    <fullName>ValorInterno__c</fullName>
    <label>Valor interno</label>
    <length>80</length>
    <type>Text</type>
</CustomField>