workspace-sf/force-app/main/default/objects/Conversao__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Objeto__c</columns>
    <columns>NomeCampo__c</columns>
    <columns>ValorInterno__c</columns>
    <columns>ValorExterno__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>